# Cheragh

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
docker/: constraints.txt
docs/: architectures_v05.md  architectures_v06.md  cache_v071.md  chunking_routing.md  enterprise_v07.md  hardening_v080.md  production.md  quality_v090.md  quickstart.md  release_v100.md
examples/: architectures_v05.py  architectures_v06.py  basic_usage.py  cache_v071.py  chunking_v041.py  cli_eval_dataset.jsonl  engine_from_path.py  enterprise_v07.py  openai_usage.py  rag_v03.yaml  rag_v04.yaml  rag_v071_cache.yaml  routing_v041.py
examples/fastapi_app/: README.md  main.py
examples/presets/: local_quality.yaml  production_hybrid.yaml  production_v100.yaml
src/cheragh/: __init__.py  adaptive.py  base.py  chain_of_note.py  citations.py  contextual_compression.py  corrective_rag.py  embeddings.py  engine.py  filters.py  flare.py  hybrid_search.py  hyde.py  hyqe.py  indexing.py  llms.py  mmr.py  parent_document.py  pipeline.py  propositional.py  query_decomposition.py  rag_fusion.py  raptor.py  reranking.py  router.py  schema.py  self_query.py  semantic_chunker.py  sentence_window.py  step_back.py  tokenization.py  tracing.py
src/cheragh.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cheragh/cache/: __init__.py  base.py  decorators.py  legacy.py  memory.py  redis.py  sqlite.py
src/cheragh/cli/: main.py
src/cheragh/compression/: __init__.py  extractive.py
src/cheragh/config/: __init__.py  loader.py  schema.py
src/cheragh/conversation/: __init__.py  engine.py
src/cheragh/corrective/: __init__.py  engine.py
src/cheragh/evaluation/: __init__.py  generation.py  pipeline.py  retrieval.py
src/cheragh/federated/: __init__.py  engine.py
src/cheragh/feedback/: __init__.py  loop.py
src/cheragh/graph/: __init__.py  engine.py
src/cheragh/ingestion/: __init__.py  pipeline.py
src/cheragh/multihop/: __init__.py  engine.py
src/cheragh/presets/: __init__.py
src/cheragh/query/: __init__.py  (+1 more)
tests/: test_core.py  test_v02_features.py  test_v03_features.py  test_v041_chunking_routing.py  test_v04_features.py  test_v05_architectures.py  test_v06_architectures.py  test_v071_cache.py  test_v07_enterprise.py  test_v080_hardening.py  test_v090_quality.py  test_v100_production.py
(+34 files in other folders)
